changed .about .card: width to 300px to avoid overflow

--- a/public/modules/static/css/about.css
+++ b/public/modules/static/css/about.css
@@ -1,5 +1,5 @@
 .about .card {
-  width: 400px;
+  width: 300px;
   margin: auto;
   display: block;
   padding: 2em 0 2em 0;
